--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,22 @@
 body{
     background-color: rgb(0, 0, 0);
-    color: rgb(250, 246, 45);
-	/* display: flex; */
+    color: #ffc82c;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	font-family: Avenir Next, sans-serif;
 }
 
-.nav_container{
-    width: 100%;
-    margin: 0 auto;
-    font-family: Avenir Next, sans-serif;
-    text-align: left;
-    float: left;
-}
-
-nav{
-    float: left;
-}
-
-nav ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    width:100%;
-}
-
-nav li{
-    display: inline-block;
-    margin: 10px;
-    padding-top: 10px;
-    position: relative;
-}
-
-nav a{
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 18px;
-}
-
-nav a:hover{
-    color: rgb(56, 165, 71);
-}
-
-nav a::before{
-    content: '';
-    display: block;
-    height: 5px;
-    width: 100%;
-    background-color: rgb(56, 165, 71);
-    border-radius: 5px;
-    position: absolute;
-    top: 0;
-    width: 0%;
-    transition: all ease-in-out 150ms;
-}
-
-nav a:hover::before{
-    width: 100%;
-}
+/* Navigation Bar */
 
 .logo{
     float: left;
     padding: 5px;
-    max-width: 200px;
-    max-height: 100px;
-}
+    max-width: 150px;
+    max-height: 50px;
+} 
+
+/* Other Styling */
 
 header{
     font-family: Raleway, sans-serif;
@@ -78,23 +27,23 @@ header{
     width: 100%;
 }
 
-header::after{
+    header::after{
     content: '';
     display:table;
     clear:both;
 }
 
-form {
+.main-form {
     max-width:  30rem;
     margin: 0 auto;
     padding: 1.5rem 2rem;
     border-radius: 8px;
-    box-shadow: 0 4px 30px rgb(255, 252, 87);
+    box-shadow: 0 4px 30px #ffc82c;
     color: white;
     background: url('solarPanel.jpeg');
 }
 
-form h1 {
+.main-form h1 {
     margin-bottom: 1.5rem;
     padding-bottom: 1rem;
     border-bottom: 1px solid var(--gray-lighter);
@@ -113,20 +62,22 @@ fieldset{
     text-align: center;
 }
 
+/* Button styling */
+
 button{
-    /* float: right; */
     margin-right: 5px;
     margin-left: 5px;
     align-items: center;
    
 }
 
+/* Experimenting Buttons */
 .submitButton {
-	box-shadow: 0px 1px 0px 0px #fff6af;
-	background:linear-gradient(to bottom, #dbff66 5%, #fff424 100%);
-	background-color:#dbff66;
+	box-shadow: 0px 1px 0px 0px #fff6af; /*yellow*/
+	background:linear-gradient(to bottom, #00b259 5%, #ffc82c 100%); /* green to yellow */
+	background-color:#00b259; /*green*/
 	border-radius:6px;
-	border:1px solid #f8ff24;
+	border:1px solid #ffc82c; /*yellow*/
 	display:inline-block;
 	cursor:pointer;
 	color:#333333;
@@ -135,11 +86,11 @@ button{
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #ffee66;
+	text-shadow:0px 1px 0px #ffc82c; /*yellow*/
 }
 .submitButton:hover {
-	background:linear-gradient(to bottom, #fff424 5%, #dbff66 100%);
-	background-color:#fff424;
+	background:linear-gradient(to bottom, #ffc82c 5%, #00b259 100%); /* yellow to green */
+	background-color:#ffc82c; /*yellow*/
 }
 .submitButton:active, .dataButton:active {
 	position:relative;
@@ -148,10 +99,10 @@ button{
 
 .dataButton {
 	box-shadow: 0px 1px 0px 0px #fff6af;
-	background:linear-gradient(to bottom, #ffff66 5%, #ccff26 100%);
-	background-color:#ffff66;
+	background:linear-gradient(to bottom, #ffc82c 5%, #00b259 100%); /* yellow to green */
+	background-color:#ffc82c; /*yellow*/
 	border-radius:6px;
-	border:1px solid #ffff26;
+	border:1px solid #ffc82c; /*yellow*/
 	display:inline-block;
 	cursor:pointer;
 	color:#333333;
@@ -160,9 +111,114 @@ button{
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #ffee66;
+	text-shadow:0px 1px 0px #ffc82c; /*yellow*/
 }
 .dataButton:hover {
-	background:linear-gradient(to bottom, #ccff26 5%, #ffff66 100%);
-	background-color:#ccff26;
+	background:linear-gradient(to bottom, #00b259 5%, #ffc82c 100%); /* green to yellow */
+	background-color:#00b259; /*green*/
 } 
+
+
+/* Mobile Nav Attempt */
+
+li {
+    
+    list-style: none;
+}
+
+a {
+    font-size: 12px;
+    text-decoration: none;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
+}
+
+.hamburger {
+    display: none;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #00b259;
+}
+
+.nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-item {
+    margin-left: 5rem;
+}
+
+.nav-link{
+    font-size: 20px;
+    font-family: Avenir Next, sans-serif;
+    font-weight: 400;
+    color: #00b259; /* Correct sigora green color */
+}
+
+.nav-link:hover{
+    color: #ffc82c; /* Correct sigora yellow color */
+}
+
+.nav-logo {
+    font-size: 2.1rem;
+    font-weight: 500;
+}
+
+@media only screen and (max-width: 768px) {
+    .nav-menu {
+        position: fixed;
+        left: -100%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: rgb(0, 0, 0);
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
+        color: white;
+    }
+
+    .nav-menu.active {
+        left: 0;
+    }
+
+    .nav-item {
+        margin: 2.5rem 0;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+    /* // Inside the Media Query. */
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+}
