--- a/styles.css
+++ b/styles.css
@@ -186,13 +186,14 @@ a {
         top: 5rem;
         flex-direction: column;
         background-color: rgb(0, 0, 0);
-        width: 100%;
+        width: -120%;
         border-radius: 10px;
         text-align: center;
         transition: 0.3s;
         box-shadow:
             0 10px 27px rgba(0, 0, 0, 0.05);
         color: white;
+        padding: 20px;
     }
 
     .nav-menu.active {
